java: Avoid deprecated Boolean constructor